--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "ioredis": "^5.6.0",
     "mongoose": "^8.13.0"
   },
   "devDependencies": {
