--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - '27017:27017'
 
   redis:
-    image: redis:latest
+    image: redis/redis-stack-server:latest
     container_name: redis
     ports:
       - '6379:6379'
