--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bull": "^4.16.5",
     "express": "^4.21.2",
     "ioredis": "^5.6.0",
-    "mongoose": "^8.13.0"
+    "mongoose": "^8.13.0",
+    "node-cron": "^3.0.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.7",
